# swap-curve-risk-engine

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  scenarios.csv
data/market/: usd_sofr_irs_par_rates.csv  usd_sofr_ois_market_quotes.csv  usd_sofr_ois_par_rates.csv
data/portfolio/: usd_swap_portfolio.csv
outputs/: curve_nodes.csv  portfolio_cashflows.csv  portfolio_risk.csv  scenario_matrix.csv
scripts/: run_demo.py
src/swap_curve_risk_engine/: __main__.py  cli.py
src/swap_curve_risk_engine/curves/: curve.py  ois_bootstrap.py
src/swap_curve_risk_engine/io/: loaders.py
src/swap_curve_risk_engine/products/: swap.py
src/swap_curve_risk_engine/risk/: analytics.py
src/swap_curve_risk_engine/utils/: tenor.py
tests/: test_smoke.py
