[project]
name = "swap-curve-risk-engine"
version = "0.1.0"
description = "Curve bootstrapping, swap pricing, and DV01/BP01 risk analytics (USD/SOFR)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
swap-risk = "swap_curve_risk_engine.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]